--- a/.github/docker-publish.yml
+++ b/.github/docker-publish.yml
@@ -3,7 +3,7 @@ name: Docker Build and Push
 on:
   push:
     branches:
-      - master
+      - master  # Le workflow se déclenche sur les pushs vers la branche master
 
 jobs:
   build-and-push:
@@ -11,16 +11,16 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2  # Utilisation de la version stable de l'action checkout
 
     - name: Log in to Docker Hub
-      uses: docker/login-action@v2
+      uses: docker/login-action@v2  # Connecte Docker Hub à GitHub Actions
       with:
-        username: ${{ secrets.lalle1 }}
+        username: ${{ secrets.lalle1 }}  # Utilisez un nom explicite pour les secrets
         password: ${{ secrets.As10101010 }}
 
     - name: Build Docker image
-      run: docker build -t lalle1/pi:latest .
+      run: docker build -t lalle1/pi:latest .  # Construire l'image Docker
 
     - name: Push Docker image
-      run: docker push lalle1/pi:latest
+      run: docker push lalle1/pi:latest  # Pousser l'image vers Docker Hub
